infrastructure/base/network/network-policies/egress-mail/allow-egress-mail.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-mail
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - protocol: TCP
          port: 465
        - protocol: TCP
          port: 587
        - protocol: TCP
          port: 993
